@@ -82,6 +82,13 @@ h4. Changes in @org.eclipse.sirius.diagram.ui@
 h4. Migrations
 
 * <span class="label label-success">Added</span> A migration participant has been added to sort GMF edges order. The goal is to have edges displayed as before "edges z-order" improvement. Indeed, the display now consider order of GMF edges instead of order of its sources/targets.The corresponding version, stored in attribute version of viewpoint:DAnalysis of the aird file, is _14.6.0.202109231100_.
+
+h2(#sirius6.5.1). Changes in Sirius 6.5.1
+
+h4. Migrations
+
+h3. Developer-Visible Changes
+
 * <span class="label label-info">Modified</span> The migration participant @org.eclipse.sirius.diagram.ui.business.internal.migration.NoteShapeDefaultLabelAlignmentMigrationParticipant@ has been updated to repair Notes with a potential wrong vertical label alignment. This problem can occur since Sirius 6.3.2 used in a collaborative environment, Obeo Designer Team Edition or Team For Capella for example. The corresponding version, stored in the attribute version of viewpoint:DAnalysis of the aird file, is _14.5.1.202106111100_ (migration added in Sirius 6.5.1).
 
 h2(#sirius6.5.0). Changes in Sirius 6.5.0
